# zx123_tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ZX123 Tool.py  zx123_gui.icns  zx123_gui.py  zx123_hash.json  zx123_tool.py
CMake/Find/: Findasciidoctor-pdf.cmake  Findasciidoctor.cmake  Findcreate-dmg.cmake  Findnuitka.cmake
MacOS/: DMG Icon.icns  Info.plist
MacOS/Resources/: ZX123 Tool.icns  zx2.icns  zx3.icns  zxd.icns
Resources/: Info.plist  ZX123 Tool.icns  rom.icns  zx1.icns
docs/: index.html  manual.html
docs/en/: index.html  manual.html
docs/es/: index.html  manual.html
locale/en/: index.adoc
locale/es/: index.adoc
zx123_tool_gui/: __init__.py  _extra_gui.py  _main_gui.py
